2009-03-11  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac:
	* exempi/Makefile.am:
	* m4/ax_ld_check_flag.m4:
	Detect proper ldflags. (Closes bug #20554)

	* configure.ac: Bump to version 2.1.1

2009-03-11  Lars Holm Nielsen <lnielsen@eso.org>

	* source/XMPFiles/FileHandlers/Makefile.am:
	* source/XMPFiles/FormatSupport/Makefile.am:
	* configure.ac:
	Some files missing when building on Mac
	(Closes bug #20554)

2009-02-24  Hubert Figuiere  <hub@figuiere.net>

	* exempi/exempi.cpp (xmp_set_property): 
	If the value is struct or array, if the property value
	is the empty string pass NULL.
	(Closes bug #16030)

2009-02-22  Hubert Figuiere  <hub@figuiere.net>

	* source/common/XMLParserAdapter.hpp: 
	Remove an annoying warning.

2009-02-20  Hubert Figuiere  <hub@figuiere.net>

	* configure.in: 
	* m4/shave.m4:
	* shave-libtool.in:
	* shave.in:
	Add shave to make the build output saner.

2008-12-28  Michael Biebl <biebl@debian.org>

	* tests/utils.cpp
	* samples/source/XMPFilesCoverage.cpp
	* source/common/XML_Node.cpp
	Fix build on gcc 4.4

2008-12-24  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPFiles/FileHandlers/P2_Handler.cpp (SetStartTimecodeFromLegacyXML): 
	Don't compare string pointers. (Closes: #19312)

=== 2.1.0 ===

2008-12-24  Hubert Figuiere  <hub@figuiere.net>

	* exempi/tests/test-bgo.cpp
        * exempi/tests/test-xmpfiles.cpp
	Remove serious warnings.

2008-12-21  Hubert Figuiere  <hub@figuiere.net>

	* exempi/tests/Makefile.am
        * exempi/tests/test-bgo.cpp
	* exempi/tests/test-exempi-core.cpp
	* exempi/tests/test-serialise.cpp
	* exempi/tests/test-tiff-leak.cpp
	* exempi/tests/test-write-new-prop.cpp
	* exempi/tests/test-xmpfiles-write.cpp
	* exempi/tests/test-xmpfiles.cpp
	* exempi/tests/test3.cpp
	* exempi/tests/testinit.cpp
	Migrated to use boost/test/minimal
	
	* exempi/tests/test1.cpp
	* exempi/tests/test2.cpp
	Split out for the above change.

2008-12-19  Hubert Figuiere  <hub@figuiere.net>
