@@ -1,7 +1,7 @@
 /*
  * exempi - exempi.cpp
  *
- * Copyright (C) 2007-2008 Hubert Figuiere
+ * Copyright (C) 2007-2009 Hubert Figuiere
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -341,8 +341,16 @@ bool xmp_files_can_put_xmp(XmpFilePtr xf, XmpPtr xmp)
 	CHECK_PTR(xf, false);
 	RESET_ERROR;
 	SXMPFiles *txf = (SXMPFiles*)xf;
+  bool result = false;
 
-	return txf->CanPutXMP(*(SXMPMeta*)xmp);
+  try {
+    result = txf->CanPutXMP(*(SXMPMeta*)xmp);
+  }
+	catch(const XMP_Error & e) {
+		set_error(e);
+		return false;
+	}
+  return result;
 }
 
 
