@@ -1,3 +1,9 @@
+2009-05-15  Hubert Figuiere  <hub@figuiere.net>
+
+	* exempi/exempi.cpp:
+	Catch unhandled exceptions in xmp_files_can_put_xmp()
+	(Closes bug #20622)
+
 2009-03-11  Hubert Figuiere  <hub@figuiere.net>
 
 	* configure.ac:
